manifests/trmnl-display/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trmnl-public
  namespace: trmnl-display
spec:
  entryPoints:
  - websecure
  routes:
  - match: (Host("nickgarvey.com") || Host("www.nickgarvey.com")) && Path("/api/trmnl/dashboard.png")
    kind: Rule
    middlewares:
    - name: trmnl-rewrite
    services:
    - name: trmnl-display
      port: 80
  tls:
    secretName: nickgarvey-com-tls
